language JN: 1) intro

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -1,39 +1,39 @@
 
 % introductory paragraph
-\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being the favorite sport in large parts of the world into a respected industry as reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match across all European leagues in the season 2017/18. Also economically speaking, football is synonymous with big business as the \textit{Bundesliga} ranges in second place in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. With such a great appeal, the matches of the football industry generate external effects in many dimensions. On the positive side, there are higher expenditures for consumption (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among others. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the season 2017/18, the State and Federal Police accumulated over 2.11 million working hours to guarantee the spectators' safety surrounding German professional football matches \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) about the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches, where social interactions lead to violence, but also deals with the question that is at the heart of the discussion of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
+\lettrine[lines=2,nindent=0pt]{\color{darkgray}\textbf{F}}{ootball} has grown from being a favorite sport in many parts of the world into a respected industry, which is reflected by high attendance rates and considerable revenues.\footnote{Except where otherwise noted, football refers to the sport also known as soccer.} For instance, the \textit{Bundesliga}, the German top league, is a major reason for public mass gatherings and had with 42,700 spectators the highest average attendance per match of all European leagues in the season 2017/18. Also in economic terms, football is synonymous with big business as the \textit{Bundesliga} ranks second in Europe with generated revenues of 3.17 billion euros \citep{deloitte2019report}. Due to their great popularity, professional football matches generate external effects in many regards. On the positive side, there is higher consumer spending (e.g. merchandising, catering, and accommodation) and ultimately increased local tax revenues. On the negative side, the games induce air and noise pollution, together with a higher frequency of accidents, among other things. Violent fan behavior is a particularly pervasive aspect in this context and affects individuals' health, the penal system, and the police. In the 2017/18 season, the State and Federal Police force invested over 2.11 million working hours to ensure the spectators' safety at professional football matches in Germany \citep{zis17_18}. There has been a widely noticed legal dispute between the Federal State of Bremen and the German Football League (DFL) regarding the reimbursement of costs for high-risk games, in which the \cite{fac_2019} declared the charges imposed by Bremen as legitimate. This study does not only focus on football matches where social interactions lead to violence, but also deals with the question of whether the negative externalities of football games that bring so much prosperity should be absorbed. 
 
 
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that football games in the framework of the German professional football league system exert on violent behavior. To get at the causal impact of football matches on physical assaults, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while also accounting for other possible confounding variation from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games. Furthermore, I exploit betting odds that represent pregame expectations.} Second, the primary outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the state level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and build the outcome variable. 
+The aim of this paper is to examine in detail the effects of football games on violent behavior in the German professional football league. To assess the causal impact of football matches on physical assaults, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, and taking into account other possible confounding variation from weather or holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games in the period 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by no means limited to the time and location of the games. Furthermore, I exploit betting odds that reflect pregame expectations.} Second, the primary outcome variable, the rate of physical assaults, is derived from comprehensive registry data provided by the Federal Criminal Police Office. It covers all individuals that become victims of a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays at the state level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and create the outcome variable. 
 
 
 
 % findings
-I find significant and robust evidence that football matches lead to an increase in the rate of physical assaults. A home game increases the assault rate by, on average, 21.5 percent. The effects are almost entirely driven by male victims and are most substantial for the age group 18-29 years. Besides, the impact of football matches is stemming from victims with no prior relationship to the suspect and completed offenses (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect found on the entire sample. I find no evidence that the effects of football games on assaults are offset by reductions on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification strategy, as away games do not change the level of physical assaults in the home district.
+I find significant and robust evidence that football matches lead to an increase in the prevalence of physical assaults. A home game increases the assault rate by on average 21.5 percent. The effects are almost entirely driven by male victims and are most pronounced in the 18-29 age group. Moreover, a heterogeneity analysis reveals that the effects are caused by attacks on victims with no prior relationship to the suspect and completed offenses (i.e. no attempts). Assaults on police officers on duty account for 16 percent of the baseline effect of the entire sample. I find no evidence that the effects of football games on the prevalence of assaults are offset by reductions in violent acts on days adjacent to the matchday or in nearby areas. The focus on home games in the empirical framework does not pose a threat to the identification strategy, as away games do not change the level of physical assaults in the home district.
 
 
 
 % channels 
-There are a couple of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis, proposed by \cite{dollard1939frustration}, interprets violent behavior as an act to rehabilitate self-esteem after an instigating frustrating event, such as the defeat of one's favorite team. Another prominent theory is the idea of social learning, in which spectators mimic the behavior displayed on the pitch \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for why there are more physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence that would support the frustration-aggression hypothesis. In the second step, I consider game and team prominence as potential channels. I find a three times higher impact on the rate of physical assaults during high-rivalry matches. This higher effect can be associated with mutual dislike of opposing fan groups or by the social learning theory, as high-rivalry matches exhibit increased game intensity on the pitch. Furthermore, I find larger effects for the highest tier of the league system, which attracts the most people. Ultimately, I cannot pinpoint the one channel at play, but there is suggestive evidence that spectators mimic players' behavior, they select into specific matches, and eventually a mechanic agglomeration effect. 
+There are a number of theories rationalizing spectator violence. For instance, the frustration-aggression hypothesis, proposed by \cite{dollard1939frustration}, interprets violent behavior as an act to rehabilitate self-esteem triggered by a frustrating event, such as the defeat of one's favorite team. Another prominent theory is the idea of social learning, according to which spectators mimic the behavior displayed on the field \citep{bandura1973aggression, bandura2007social}. In my analysis, I test whether the frustration-aggression hypothesis can serve as an explanation for the increase in physical assaults. To do so, I use emotional cues from either emotionally unsettling events during the game or when game outcomes do not align with pregame expectations. In both cases, there is no evidence to support the frustration-aggression hypothesis. In the second step, I consider the prominence of games and teams as potential channels. In games with high rivalry, the impact on the rate of physical assaults is three times higher. This larger effect may be related to the mutual dislike of opposing fan groups or to the social learning theory, as high-rivalry matches are characterized by more intensity on the field. Furthermore, I find larger effects for the highest division of the league system, which attracts the most viewers. Ultimately, I cannot pinpoint the one channel at play, but there is suggestive evidence that spectators mimic the behavior of the players, that violent viewers select into specific matches, and eventually a mechanic agglomeration effect. 
 
 
 
 % back of envelope calculations
-Back-of-the-envelope calculations based on my estimates indicate that the crime externalities of football games are substantial. For example, football games in the first three leagues of the German Football league system explain 17.7 percent of assault reports and lead to 18,770 additional assaults in the season of 2014/15. \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), which implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compared to other estimates from around the globe. In the United States, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in Great Britain the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
+Back-of-the-envelope calculations based on my estimates indicate that the crime externalities of football games are substantial. In the season of 2014/15, for example, football games in the top three leagues of the German football league system explain 17.7 percent of assault reports and lead to 18,770 additional assaults in the sample regions. \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), which implies an annual social cost of 95 million euros.\footnote{The estimated social costs of \cite{glaubitz2016kostet} are conservative compared to estimates from other countries. In the United States, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in Great Britain the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 
 
 
 
 % literature
-This paper complements the literature on sporting events and their effects on different dimensions of crime. Studies in the US American context demonstrate that American college football games lead to a higher incidence of rape \citep{lindo2018college}, physical assaults, vandalism, disorderly conducts, and alcohol-related offenses \citep{rees2009college}. Furthermore, it has been documented that intimate partner violence is linked with unsettling defeats of professional American football games \citep{card2011family}. In the European setting, studies have shown that professional football games increase property and violent crimes \citep{marie2016police}, and displace offenses temporally \citep{montolio2016time} as well as spatially \citep{montolio2019measuring}.
+This paper complements the literature on sporting events and their effects on different dimensions of crime. Studies in the US American context demonstrate that American college football games lead to a higher incidence of rape \citep{lindo2018college}, physical assaults, vandalism, disorderly conducts, and alcohol-related offenses \citep{rees2009college}. Furthermore, it has been documented that intimate partner violence is linked to unsettling defeats in professional American football games \citep{card2011family}. In the European setting, studies have shown that professional football games increase property and violent crimes \citep{marie2016police}, and shift offenses both temporally \citep{montolio2016time} as well as spatially \citep{montolio2019measuring}.
 
 
 
 
 % extension literature
-The empirical analysis in this paper expands previous literature on many dimensions. I assemble a unique data set from various sources to characterize in full the impact of football matches on criminal behavior in the top three German professional football divisions. Using the universe of criminal offenses, I am able to show that almost one in five physical assaults can be attributed to professional football games. In addition to the overall effect, I show effect heterogeneity by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
+The empirical analysis in this paper contributes to previous literature in many regards. I compile a unique data set from various sources to comprehensively characterize the impact of football matches on criminal behavior in the top three German professional football divisions. Using the universe of criminal offenses, I show that almost one in five physical assaults can be attributed to professional football games. In addition to the overall effect, I show effect heterogeneity by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
 % emphasize more the importance of football in Germany
 
 
@@ -41,7 +41,7 @@ The empirical analysis in this paper expands previous literature on many dimensi
 
 
 % roadmap
-The remainder of the paper is structured as follows. The next section provides information about football games, how they are associated with violent spectator behavior, and previous literature. Section \ref{sec_soc_ext:data} explains the data and variables. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
+The remainder of the paper is structured as follows. The next section provides information about football games, their relationship with violent spectator behavior, and previous literature. Section \ref{sec_soc_ext:data} explains the data and the variables. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
 
 
 
